[package]
name = "agentos"
version = "0.1.0"
edition = "2021"
authors = ["ochir ochire@proton.me"]
description = "AI agent library"
license = "MIT"
homepage = "https://github.com/OchirErkhembayar/agentos"
repository = "https://github.com/OchirErkhembayar/agentos"
readme = "README.md"
categories = ["science"]
keywords = ["agents", "agent", "ai"]
include = [
  "/src",
  "/README.md",
  "/LICENCE.txt"
]

[dependencies]
